--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
 /* Add application styles & imports to this file! */
 
-@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+body{
+  margin:unset;
+}
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
